--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <h1>Hello here os our website</h1>
     <p>Here is some content</p>
+    <footer>Hey! I'm Footer :)</footer>
 </body>
 
 </html>
